S13nSW: Treat the whole range is a valid range in ServiceWorkerUtils::ExtractSinglePartHttpRange()

This fixes S13nSW specific failures on
external/wpt/service-workers/service-worker/fetch-canvas-tainting-video-cache.https.html.
Note that "fix" here means that the result would be the same as
non-S13nSW. There are still some failures on the test page.

Bug: 833241
Cq-Include-Trybots: master.tryserver.chromium.linux:linux_mojo
Change-Id: I8c6dce03475cc50f0fb8900b73a8d7407606f170
Reviewed-on: https://chromium-review.googlesource.com/1013362
Reviewed-by: Daniel Murphy <dmurph@chromium.org>
Reviewed-by: Matt Falkenhagen <falken@chromium.org>
Commit-Queue: Kenichi Ishibashi <bashi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#551246}
Former-commit-id: b260357a806684da8226b75fd4d4d07a4e53a465